fixed jump to top hwne press on btn, added styles to grid layout

--- a/css/style.css
+++ b/css/style.css
@@ -135,8 +135,25 @@ body {
 .row {
   max-width: 114rem;
   background-color: #eee;
-  margin: 0 auto;
-  margin-bottom: 80px; }
+  margin: 0 auto; }
+  .row:not(:last-child) {
+    margin-bottom: 8rem; }
+  .row::after {
+    content: "";
+    clear: both;
+    display: table; }
+  .row .col-1-of-2 {
+    width: calc((100% - 6rem) / 2);
+    background-color: tomato;
+    float: left; }
+    .row .col-1-of-2:not(:last-child) {
+      margin-right: 6rem; }
+  .row .col-1-of-3 {
+    width: calc((100% - 2 * 6rem) / 3);
+    background-color: blue;
+    float: left; }
+    .row .col-1-of-3:not(:last-child) {
+      margin-right: 6rem; }
 
 body {
   font-family: "Lato", sans-serif;
