--- a/sass/layout/_grid.scss
+++ b/sass/layout/_grid.scss
@@ -2,6 +2,33 @@
   max-width: $grid-width;
   background-color: #eee;
   margin: 0 auto;
-  margin-bottom: 80px;
+
+  &:not(:last-child) {
+    margin-bottom: $gutter-vertical;
+  }
+
+  @include clearfix;
+
+  .col-1-of-2 {
+    width: calc((100% - #{$gutter-horizontal}) / 2);
+    background-color: tomato;
+    float: left;
+
+    &:not(:last-child) {
+      margin-right: $gutter-horizontal;
+    }
+  }
+
+  .col-1-of-3 {
+    width: calc((100% - 2 * #{$gutter-horizontal}) / 3);
+    background-color: blue;
+    float: left;
+
+    &:not(:last-child) {
+      margin-right: $gutter-horizontal;
+    }
+  }
+
+
 
 }
