--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -8,3 +8,5 @@ $color-black: #000;
 
 // * Grid
 $grid-width: 114rem;
+$gutter-vertical: 8rem;
+$gutter-horizontal: 6rem;
